Event Listners now work correctly and populate the array

--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     <h1>Fireman</h1>
 
     <main class ="letterboard">
-        <div class="placeholders" id="ph1" >A</div class="placeholders" id="" >
-        <div class="placeholders" id="ph2" >B</div class="placeholders" id="" >
-        <div class="placeholders" id="ph3" >C</div class="placeholders" id="" >
-        <div class="placeholders" id="ph4" >D</div class="placeholders" id="" >
-        <div class="placeholders" id="ph5" >E</div class="placeholders" id="" >
-        <div class="placeholders" id="ph6" >F</div class="placeholders" id="" >
-        <div class="placeholders" id="ph7" >G</div class="placeholders" id="" >
-        <div class="placeholders" id="ph8" >H</div class="placeholders" id="" >
-        <div class="placeholders" id="ph9" >I</div class="placeholders" id="" >
-        <div class="placeholders" id="ph10" >J</div class="placeholders" id="" >
-        <div class="placeholders" id="ph11" >K</div class="placeholders" id="" >
-        <div class="placeholders" id="ph12" >L</div class="placeholders" id="" >
-        <div class="placeholders" id="ph13" >M</div class="placeholders" id="" >
-        <div class="placeholders" id="ph14" >N</div class="placeholders" id="" >
-        <div class="placeholders" id="ph15" >O</div class="placeholders" id="" >
-        <div class="placeholders" id="ph16" >P</div class="placeholders" id="" >
-        <div class="placeholders" id="ph17" >Q</div class="placeholders" id="" >
-        <div class="placeholders" id="ph18" >R</div class="placeholders" id="" >
-        <div class="placeholders" id="ph19" >S</div class="placeholders" id="" >
-        <div class="placeholders" id="ph20" >T</div class="placeholders" id="" >
-        <div class="placeholders" id="ph21" >U</div class="placeholders" id="" >
-        <div class="placeholders" id="ph22" >V</div class="placeholders" id="" >
-        <div class="placeholders" id="ph23" >W</div class="placeholders" id="" >
-        <div class="placeholders" id="ph24" >X</div class="placeholders" id="" >
-        <div class="placeholders" id="ph25" >Y</div class="placeholders" id="" >
-        <div class="placeholders" id="ph26" >Z</div class="placeholders" id="" >
+        <div class="placeholders" data-id="A" >A</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="B" >B</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="C" >C</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="D" >D</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="E" >E</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="F" >F</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="G" >G</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="H" >H</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="I" >I</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="J" >J</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="K" >K</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="L" >L</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="M" >M</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="N" >N</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="O" >O</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="P" >P</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="Q" >Q</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="R" >R</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="S" >S</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="T" >T</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="U" >U</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="V" >V</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="W" >W</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="X" >X</div class="placeholders" data-id="" >
+        <div class="placeholders" data-id="Y" >Y</div class="placeholders" id="" >
+        <div class="placeholders" data-id="Z" >Z</div class="placeholders" id="" >
     </main>
 
     <div class = "answerSpace">
