Match is almost successful, still working on addressing incorrect guesses

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>Fireman</h1>
+    <button class="aboutGame">About this Game</button>
+
 
     <main class ="letterboard">
         <div class="placeholders" data-id="A" >A</div class="placeholders" data-id="" >
