Flame animation is working correctly as are yellow value-boxes

--- a/index.html
+++ b/index.html
@@ -46,10 +46,18 @@
 
     </div>
     
-<!-- 
+
     <div class = "imageSpace">
-        <img src="https://media.git.generalassemb.ly/user/34057/files/b4ee4980-721f-11eb-93ac-a7a6f63aa4cb" alt="Building aflame image">
-    </div> -->
+        <div class ="overlay_bottom"> 
+            <img id= "building" src="https://user-images.githubusercontent.com/63027187/108918332-30c10b00-75ff-11eb-9289-30f60b6d4422.png" alt="Building aflame image">
+        </div>  
+        <div class ="overlay_top">
+        <img class= "flame" src = "https://user-images.githubusercontent.com/63027187/108919836-b47bf700-7601-11eb-8ff5-269af42f770f.png" alt="flame">
+    </div>
+        <!-- <div class ="waterAnimation">
+            <img class="waterSpray" src="https://user-images.githubusercontent.com/63027187/108942953-ec953100-7625-11eb-8dc6-666195b0a85a.png" alt="waterSpray">
+        </div> -->
+    </div>
 
 
 
