Commented out displayLetter, proceeding to address duplicate letters

--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 <body>
     <div class = "main_section">
     <h1>🔥Fireman🔥</h1>
+    <!-- <button class="resetGame" id="resetGame">Reset the Game</button> -->
     <button class="aboutGame" id="openModal">About this Game</button>
         <div id="modalTextbox">
-            <h2>Welcome to Fireman</h2>
-            <p>Thank you for volunteering for the General Assembly SEI Volunteer Fire Department!</p>
-            <p>A very importat data center in Menlo Park is on fire! To put it out, we need to deduce the mystery word selected by <strong>Player One</strong>.</p>
+            <h2>Welcome to Fireman - A Game for Two Players</h2>
+            <p>Thank you for joining the General Assembly SEI Volunteer Fire Department!</p>
+            <p>A very important data center in Menlo Park is on fire! To put it out, we need to deduce the mystery word that was just selected by <strong>Player One</strong>.</p>
             <p>Each of the yellow boxes represents a letter that must be deduced by <strong>Player Two</strong>.</p>
             <p> If you, <strong>Player Two</strong>, can guess all of the letters in time, we can save all the vulnerable servers!</p>
+            <p> We only have a little amount of time before the servers are destroyed. Unfortunately we don't know exactly how long we have... <strong>but maybe the word length can give us a hint...</strong>.</p>
             <div id="modalFooter">
-                <button class="modalButton" id="closeModal">close</button>
+                <button class="modalButton" id="closeModal">Let's Get Going!</button>
             </div>
         </div>
-    <div>STATUS</div>
+    
 
     <main class ="letterboard">
         <div class="placeholders" data-id="A" >A</div class="placeholders" data-id="" >
@@ -63,8 +65,8 @@
             <img id= "building" src="https://user-images.githubusercontent.com/63027187/108918332-30c10b00-75ff-11eb-9289-30f60b6d4422.png" alt="Building aflame image">
         </div>  
         <div class ="overlay_top">
-        <img class= "flame" src = "https://user-images.githubusercontent.com/63027187/108919836-b47bf700-7601-11eb-8ff5-269af42f770f.png" alt="flame">
-    </div>
+            <img class= "flame" src = "https://user-images.githubusercontent.com/63027187/108919836-b47bf700-7601-11eb-8ff5-269af42f770f.png" alt="flame">
+        </div>
         <!-- <div class ="waterAnimation">
             <img class="waterSpray" src="https://user-images.githubusercontent.com/63027187/108942953-ec953100-7625-11eb-8dc6-666195b0a85a.png" alt="waterSpray">
         </div> -->
