Updated with correct animation and duplicate letter issue addressed. MVP deliverable

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <p>Thank you for joining the General Assembly SEI Volunteer Fire Department!</p>
             <p>A very important data center in Menlo Park is on fire! To put it out, we need to deduce the mystery word that was just selected by <strong>Player One</strong>.</p>
             <p>Each of the yellow boxes represents a letter that must be deduced by <strong>Player Two</strong>.</p>
+            <p>Letters can appear more than once in a word, <strong> but will only appear in the yellow boxes one at-a-time!</strong></p>
+            <p> For example, M-O-O-N will require you to select "O" twice!</p>
+            <p>So be sure to think about what words may require you to select a letter more than once.</p>
             <p> If you, <strong>Player Two</strong>, can guess all of the letters in time, we can save all the vulnerable servers!</p>
             <p> We only have a little amount of time before the servers are destroyed. Unfortunately we don't know exactly how long we have... <strong>but maybe the word length can give us a hint...</strong>.</p>
             <div id="modalFooter">
