Made additions to Read Me and cleaned up JS

--- a/index.html
+++ b/index.html
@@ -28,34 +28,35 @@
             </div>
         </div>
     
+    
 
     <main class ="letterboard">
-        <div class="placeholders" data-id="A" >A</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="B" >B</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="C" >C</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="D" >D</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="E" >E</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="F" >F</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="G" >G</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="H" >H</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="I" >I</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="J" >J</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="K" >K</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="L" >L</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="M" >M</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="N" >N</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="O" >O</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="P" >P</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="Q" >Q</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="R" >R</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="S" >S</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="T" >T</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="U" >U</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="V" >V</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="W" >W</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="X" >X</div class="placeholders" data-id="" >
-        <div class="placeholders" data-id="Y" >Y</div class="placeholders" id="" >
-        <div class="placeholders" data-id="Z" >Z</div class="placeholders" id="" >
+        <div class="placeholders" data-id="A" >A</div class="placeholders" data-id="A">
+        <div class="placeholders" data-id="B" >B</div class="placeholders" data-id="B">
+        <div class="placeholders" data-id="C" >C</div class="placeholders" data-id="C">
+        <div class="placeholders" data-id="D" >D</div class="placeholders" data-id="D">
+        <div class="placeholders" data-id="E" >E</div class="placeholders" data-id="E">
+        <div class="placeholders" data-id="F" >F</div class="placeholders" data-id="F">
+        <div class="placeholders" data-id="G" >G</div class="placeholders" data-id="G">
+        <div class="placeholders" data-id="H" >H</div class="placeholders" data-id="H">
+        <div class="placeholders" data-id="I" >I</div class="placeholders" data-id="I">
+        <div class="placeholders" data-id="J" >J</div class="placeholders" data-id="J">
+        <div class="placeholders" data-id="K" >K</div class="placeholders" data-id="K">
+        <div class="placeholders" data-id="L" >L</div class="placeholders" data-id="L">
+        <div class="placeholders" data-id="M" >M</div class="placeholders" data-id="M">
+        <div class="placeholders" data-id="N" >N</div class="placeholders" data-id="N">
+        <div class="placeholders" data-id="O" >O</div class="placeholders" data-id="O">
+        <div class="placeholders" data-id="P" >P</div class="placeholders" data-id="P">
+        <div class="placeholders" data-id="Q" >Q</div class="placeholders" data-id="Q">
+        <div class="placeholders" data-id="R" >R</div class="placeholders" data-id="R">
+        <div class="placeholders" data-id="S" >S</div class="placeholders" data-id="S">
+        <div class="placeholders" data-id="T" >T</div class="placeholders" data-id="T">
+        <div class="placeholders" data-id="U" >U</div class="placeholders" data-id="U">
+        <div class="placeholders" data-id="V" >V</div class="placeholders" data-id="V">
+        <div class="placeholders" data-id="W" >W</div class="placeholders" data-id="W">
+        <div class="placeholders" data-id="X" >X</div class="placeholders" data-id="X">
+        <div class="placeholders" data-id="Y" >Y</div class="placeholders" data-id="Y">
+        <div class="placeholders" data-id="Z" >Z</div class="placeholders" data-id="Z">
     </main>
 
     <div class = "answerSpace">
@@ -81,3 +82,5 @@
     <script src = "scripts.js"></script>
 </body>
 </html>
+
+<!-- End of Code -->
